fixed NaN bug and next quiz overflow

--- a/src/Generate/Generate.css
+++ b/src/Generate/Generate.css
@@ -11,6 +11,7 @@
   border: 0px;
   color: #fff;
   font-weight: 500;
+  margin-bottom: 5rem;
   box-shadow: 0 4px 2px 2px #c33434;
 }
 
